<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">



        <TextView
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:gravity="center"
            android:text="Add Alarm"
            android:textColor="@android:color/black"
            android:textSize="20dp"/>

    <TextView
        android:id="@+id/tvLatitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Latitute: 25.23865"
        android:textColor="@android:color/black"
        android:textSize="16dp"/>

    <TextView
        android:id="@+id/tvLongitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="Longitude: 45.234564"
        android:textColor="@android:color/black"
        android:textSize="16dp"/>

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Enter Name"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray"
            android:layout_marginTop="30dp"
            android:background="@drawable/buttondesign"
            android:inputType="text"
            android:paddingLeft="8dp"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/etTask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Enter Task Name"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray"
            android:layout_marginTop="20dp"
            android:background="@drawable/buttondesign"
            android:inputType="text"
            android:paddingLeft="8dp"
            android:textSize="16sp" />

    <Button
            android:id="@+id/btnAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:text="Add"
            android:textColor="@android:color/black"
            android:textSize="18dp"/>

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Cancel"
            android:textColor="@android:color/black"
            android:textSize="18dp"/>
    </LinearLayout>
