<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.georeminder.activities.DashboardActivity">


    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/drawerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        app:layout_constraintTop_toTopOf="parent">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/TF_location"
                android:layout_width="290dp"
                android:layout_height="45dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="Name"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true" />
            <Button
                android:id="@+id/B_hospitals"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginRight="15dp"
                android:padding="5dp"
                android:background="#F44336"
                android:layout_below="@+id/TF_location"
                android:layout_alignParentStart="true"
                android:textColor="#FFFFFF"
                android:onClick="onClick"
                android:text="Hospital" />

            <Button
                android:id="@+id/B_shopping"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginRight="15dp"
                android:background="#3F51B5"
                android:layout_toEndOf="@+id/B_hospitals"
                android:layout_below="@+id/TF_location"
                android:onClick="onClick"
                android:textColor="#FFFFFF"
                android:text="Shopping Mall" />

            <Button
                android:id="@+id/B_supermarket"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginRight="15dp"
                android:background="#009688"
                android:layout_below="@+id/TF_location"
                android:textColor="#FFFFFF"
                android:layout_toEndOf="@+id/B_shopping"
                android:onClick="onClick"
                android:text="Supermarket" />


            <LinearLayout
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:background="#000000"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="16dp">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:onClick="openDrawer"
                    android:src="@drawable/ic_menu" />

                <SearchView
                    android:id="@+id/search_map"
                    app:queryHint="Search Location"
                    android:background="@android:color/white"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:padding="16dp"/>

                <ImageView
                    android:id="@+id/satelite"
                    android:layout_width="41dp"
                    android:layout_height="41dp"
                    android:onClick="sateliteview"
                    android:src="@drawable/ic_satellite" />

            </LinearLayout>

            <fragment
                android:id="@+id/map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/toolbar" />

            <ImageView
                android:id="@+id/imgAddAlarm"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerInParent="true"
                android:src="@drawable/add_alarm" />



        </RelativeLayout>

        <com.google.android.material.navigation.NavigationView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="start">

            <include layout="@layout/nav_bar" />
        </com.google.android.material.navigation.NavigationView>
    </androidx.drawerlayout.widget.DrawerLayout>

</androidx.constraintlayout.widget.ConstraintLayout>