<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="32dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="120dp"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Permission Request"
            android:textSize="24sp"
            android:textColor="@android:color/black"
            android:layout_marginTop="12dp"
            android:fontFamily="sans-serif-condensed"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:gravity="center_horizontal"
            android:textColor="@android:color/black"
            android:text="Location Reminder needs permission to access device location to provide required services. Please allow the permission" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_grant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:text="Grant Permission"
        android:textAllCaps="false" />

</RelativeLayout>