<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    tools:context="com.anita.geoereminder.activities.MapActivity">

    <ImageView
        android:layout_width="190dp"
        android:layout_height="190dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="112dp"
        android:layout_marginTop="109dp"
        android:src="@drawable/ic_maploc" />

    <Button
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="302dp"
        android:background="@drawable/buttondesign"
        android:onClick="btnClick"
        android:text="Current Location"
        android:textColor="@android:color/black"
        android:textSize="18dp" />

</RelativeLayout>